# Agent_Autorun_Protocol_LangGraph

./: .gitignore  CHANGELOG.md  CHANGELOG.zh-CN.md  INSTALL.md  INSTALL.zh-CN.md  README.md  README.zh-CN.md
.github/workflows/: validate.yml
scripts/: install.ps1  install.py  validate_bundle.py
skills/generator-critic-verification-loop/: SKILL.md
skills/generator-critic-verification-loop/agents/: openai.yaml
skills/generator-critic-verification-loop/references/: cost-model.md  prompt-templates.md  runtime-contract.md  runtime-packets.md  ucla-method-notes.md
skills/generator-critic-verification-loop/scripts/: run_generator_critic_loop.py  smoke_test_generator_critic_loop.py
skills/phase-stage-autoplan-entry/: SKILL.md
skills/phase-stage-autoplan-entry/agents/: openai.yaml
skills/phase-stage-autoplan-entry/references/: planning-contract.md
skills/phase-stage-autorun-protocol/: SKILL.md
skills/phase-stage-langgraph-runtime/: .env.example  README.md  README.zh-CN.md  langgraph.json  pyproject.toml
skills/phase-stage-langgraph-runtime/scripts/: phase_stage_client.py
skills/phase-stage-langgraph-runtime/src/phase_stage_langgraph_runtime/: __init__.py  checkpointer.py  exports.py  graphs.py  io_utils.py  models.py  planning.py
skills/phase-stage-langgraph-runtime/src/phase_stage_langgraph_runtime/templates/: autorun-protocol.template.md  phase-index.template.md  phase.template.md  planning-state.template.aclx  runtime-queue.template.md  runtime-view.template.aclx  stage-outline.template.md  stage-plan.template.md  task-intake.template.md
(+5 files in other folders)
