[project]
name = "phase-stage-langgraph-runtime"
version = "2.0.0"
description = "LangGraph-backed phase/stage workflow runtime for Codex local skills."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.2.30",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-sdk>=0.3.13",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"phase_stage_langgraph_runtime" = ["templates/*.md", "templates/*.aclx", "templates/*.json"]
